test with video

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,3 +6,12 @@
   width: 120px;
   height: 120px;
 }
+
+video{
+    position: fixed;
+    z-index: 9999;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+}
