--- a/styles/main.css
+++ b/styles/main.css
@@ -8,10 +8,12 @@
 }
 
 video{
+    margin: 0 auto;
     position: fixed;
     z-index: 9999;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
+    width: 50vw;
+    height: 50vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -49%);
 }
