--- a/styles/main.css
+++ b/styles/main.css
@@ -29,3 +29,12 @@ video{
 .highlight-theme * {
   background-color: none;
 }
+
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+   -webkit-transition-delay: 9999s;
+   transition-delay: 9999s;
+}
